# league-auto-accept

./: .gitignore  .pre-commit-config.yaml  .release-please-config.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  data.py  lcu.py  main.py  main_logic.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  settings.py  ui.py  updater.py  wait_for_lobby.py
.github/workflows/: ci.yml  release-please.yml
