[project]
name = "league-auto-accept"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psutil>=7.2.2",
    "requests>=2.33.1",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=3.0.0",
    "ruff>=0.3.0",
    "pyright>=1.1.0",
    "pyinstaller>=6.0.0",
]
